# QtOsg

./: .gitignore  CMakeLists.txt  README.md
include/io/: FileFilter.h  ModelLoader.h  ProgressManager.h
include/utils/: SceneStructureParser.h  SelectionUtil.h  StringUtil.h
include/view/: FileSettingsDialog.h  MainWindow.h  OsgContainer.h
plugins/: CMakeLists.txt  PluginLogger.cpp  PluginLogger.h
plugins/osgdb_gltf/: CMakeLists.txt  GltfParser.cpp  GltfParser.h  ReaderWriterGLTF.cpp  ReaderWriterGLTF.h
plugins/osgdb_lmb/: CMakeLists.txt  LmbParser.cpp  LmbParser.h  ReaderWriterLMB.cpp  ReaderWriterLMB.h
resources/: resources.qrc
src/: CMakeLists.txt  main.cpp
src/io/: FileFilter.cpp  ModelLoader.cpp  ProgressManager.cpp
src/utils/: SceneStructureParser.cpp  SelectionUtil.cpp  StringUtil.cpp
src/view/: FileSettingsDialog.cpp  MainWindow.cpp  MainWindow.h  OSGWidget.cpp  OSGWidget.h  OsgContainer.cpp
